--- a/Elibrary/ELibrary.csproj
+++ b/Elibrary/ELibrary.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comands.cs" />
     <Compile Include="ConsoleTable.cs" />
     <Compile Include="DB\Tables.cs" />
     <Compile Include="DB\TablesContext.cs" />
